[tool.poetry]
name = "advanced_encryption_tool"
version = "0.1.0"
description = "An advanced AES-256-GCM encryption tool with cloud KMS and hardware token support"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]
license = "MIT"
homepage = "https://github.com/yourusername/advanced_encryption_tool"

[tool.poetry.dependencies]
python = "^3.8"
pycryptodome = "^3.17"
boto3 = "^1.26"
PyKCS11 = "^1.5"
PyQt6 = "^6.4"  # If using PyQt6 for GUI
# Add any other dependencies you use

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"